tests/baselines/reference/decoratorInJsFile.errors.txt
tests/cases/compiler/a.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.


==== tests/cases/compiler/a.js (1 errors) ====
    @SomeDecorator
    class SomeClass {
        foo(x: number) {
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
        }
    }